# Suffian-Bagh-Masjid

./: .env  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
.github/workflows/: django.yml
app/: views.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  profile.py
app/static/assets/: .yarn-integrity
app/static/css/: main.css
app/templates/: about-us.html  base.html  contact-us.html  donation.html  home.html  index.html  login.html  portfolio.html  prayers.html  school.html  signup.html
app/templates/partials/: messages.html
env/: local
scripts/: createdb.py  nginxconf.py  pgxn.sql
